--- a/hi.ipynb
+++ b/hi.ipynb
@@ -36,6 +36,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hiiii\n"
+     ]
+    }
+   ],
+   "source": [
+    "console.log(\"Hiiii\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
